contact page jsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,37 @@
 {
   "cSpell.ignoreWords": [
+    "accusantium",
+    "adipisicing",
+    "amet",
+    "aspernatur",
+    "atque",
+    "commodi",
+    "consectetur",
+    "cum",
+    "debitis",
+    "delectus",
+    "deleniti",
+    "dolor",
+    "doloribus",
+    "earum",
+    "elit",
+    "facere",
     "grup",
-    "page"
+    "ipsum",
+    "iusto",
+    "lorem",
+    "magnam",
+    "nulla",
+    "odio",
+    "omnis",
+    "page",
+    "pariatur",
+    "possimus",
+    "quia",
+    "ratione",
+    "sequi",
+    "sit",
+    "thegreatdevco",
+    "totam"
   ]
 }
