--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-emotion": "^6.2.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
