--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
