--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@emotion/styled": "^11.1.5",
     "gatsby": "^3.2.1",
     "gatsby-plugin-emotion": "^6.2.0",
+    "gatsby-plugin-image": "^1.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-sharp": "^3.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
