prefetched google fonts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "atque",
     "commodi",
     "consectetur",
+    "contentful",
     "cum",
     "debitis",
     "delectus",
@@ -17,20 +18,27 @@
     "elit",
     "facere",
     "grup",
+    "id",
     "ipsum",
     "iusto",
+    "johndoe",
+    "l",
     "lorem",
     "magnam",
     "nulla",
+    "nv",
     "odio",
     "omnis",
     "page",
     "pariatur",
+    "plng",
     "possimus",
+    "prefetch",
     "quia",
     "ratione",
     "sequi",
     "sit",
+    "space",
     "thegreatdevco",
     "totam"
   ]
