--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "slugify": "^1.5.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
