--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gatsby": "^3.2.1",
     "gatsby-plugin-emotion": "^6.2.0",
     "gatsby-plugin-image": "^1.3.0",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.3.0",
@@ -27,6 +27,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "slugify": "^1.5.0"
   },
